fix input spacing + implement useMemo for unitCount

--- a/site/src/app/roadmap/planner/Course.scss
+++ b/site/src/app/roadmap/planner/Course.scss
@@ -165,7 +165,6 @@
   }
 }
 
-// @todo adjust spacing + class names + overall looks
 .custom-units {
   margin-left: auto;
   color: inherit;
@@ -180,6 +179,6 @@
 
 .unit-input input {
   text-align: center;
-  padding: 2px 6px;
+  padding: 1px 6px;
   font-size: 14px;
 }
